Modifico el path para los accesos del grupo de compras